# bevy_pixel_art_shader

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs
src/: compositor.rs  compositor.wgsl  holdout.wgsl  holdout_prepass.wgsl  lib.rs  pixel_art.wgsl  pixel_art_prepass.wgsl
