[package]
name = "bevy_pixel_art_shader"
version = "0.2.1"
exclude = ["demo.gif"]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jungkwon Lee <deruci89@gmail.com>"]
description = "Pixel art material extension for Bevy — toon shading, CIELAB palette quantization, and Bayer dithering on top of PBR lighting."
repository = "https://github.com/Mediocre-AI/bevy_pixel_art_shader"
homepage = "https://github.com/Mediocre-AI/bevy_pixel_art_shader"
keywords = ["bevy", "pixel-art", "shader", "toon-shading", "dithering"]
categories = ["game-engines", "graphics", "rendering"]
readme = "README.md"

[dependencies]
bevy = { version = "0.18", features = ["3d"] }

[dev-dependencies]
bevy_edge_detection_outline = { path = "../bevy_edge_detection_outline", version = "0.3" }
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34"

[[example]]
name = "demo"
path = "examples/demo.rs"
